--- a/CW5_Word2Vec_J015_19_12.ipynb
+++ b/CW5_Word2Vec_J015_19_12.ipynb
@@ -808,6 +808,158 @@
           "execution_count": 20
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DCY2cIAvPR_2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 410
+        },
+        "outputId": "cc9abfd6-08d2-4c8a-fd82-250191256614"
+      },
+      "source": [
+        "pairs_df"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Word1</th>\n",
+              "      <th>Word2</th>\n",
+              "      <th>Similarity Score</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>bought</td>\n",
+              "      <td>first</td>\n",
+              "      <td>0.194614</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>bought</td>\n",
+              "      <td>hpc</td>\n",
+              "      <td>-0.194546</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>bought</td>\n",
+              "      <td>served</td>\n",
+              "      <td>-0.039109</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>bought</td>\n",
+              "      <td>faithfully</td>\n",
+              "      <td>-0.013340</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>bought</td>\n",
+              "      <td>lost</td>\n",
+              "      <td>-0.108581</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2696</th>\n",
+              "      <td>decade</td>\n",
+              "      <td>coming</td>\n",
+              "      <td>0.133952</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2697</th>\n",
+              "      <td>decade</td>\n",
+              "      <td>home</td>\n",
+              "      <td>-0.048604</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2698</th>\n",
+              "      <td>use</td>\n",
+              "      <td>coming</td>\n",
+              "      <td>-0.197798</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2699</th>\n",
+              "      <td>use</td>\n",
+              "      <td>home</td>\n",
+              "      <td>0.275106</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2700</th>\n",
+              "      <td>coming</td>\n",
+              "      <td>home</td>\n",
+              "      <td>0.081795</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>2701 rows × 3 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       Word1       Word2  Similarity Score\n",
+              "0     bought       first          0.194614\n",
+              "1     bought         hpc         -0.194546\n",
+              "2     bought      served         -0.039109\n",
+              "3     bought  faithfully         -0.013340\n",
+              "4     bought        lost         -0.108581\n",
+              "...      ...         ...               ...\n",
+              "2696  decade      coming          0.133952\n",
+              "2697  decade        home         -0.048604\n",
+              "2698     use      coming         -0.197798\n",
+              "2699     use        home          0.275106\n",
+              "2700  coming        home          0.081795\n",
+              "\n",
+              "[2701 rows x 3 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QfQ3zqhXPT6U",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
